[package]
name = "twdl"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
futures-util = "0.3.31"
percent-encoding = "2.3.2"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
